--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "simplebar-react": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
