--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://JoseCastr0.github.io/game-of-front",
+  "homepage": "https://JoseCastr0.github.io/game-of-front",
   "name": "games-of-front",
   "version": "0.1.0",
   "private": true,
@@ -12,11 +12,13 @@
     "i18next": "^19.0.3",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-xhr-backend": "^3.2.2",
-    "node-sass": "^4.13.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.0",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "simplebar-react": "^2.1.0"
@@ -46,5 +48,5 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0"
-  }  
+  }
 }
